--- a/configuration/testsuite.properties
+++ b/configuration/testsuite.properties
@@ -1,3 +1,17 @@
 # Test suite configuration settings
+
+#
+# Defines which environment will be used
+#
 startingUrl = https://acpt.test.mot-testing.service.gov.uk
+
+#
+# The seed used by OTP Pin Generator in all test environments
+#
 seed = 9b0bf51be1fdd18842209e430092d643b28768b7
+
+#
+# The browser for Selenium to use.
+# Supported values are: chrome
+#
+browser = chrome
