Clarified DI lifecycle, added not logged in test.

--- a/configuration/testsuite.properties
+++ b/configuration/testsuite.properties
@@ -1,7 +1,8 @@
 # Test suite configuration settings
 
 #
-# Defines which environment will be used
+# Defines which environment will be used.
+# Used as the home URL in tests, don't include a trailing slash
 #
 startingUrl = https://acpt.test.mot-testing.service.gov.uk
 
