--- a/configuration/testsuite.properties
+++ b/configuration/testsuite.properties
@@ -4,7 +4,8 @@
 # Defines which environment will be used.
 # Used as the home URL in tests, don't include a trailing slash
 #
-startingUrl = https://acpt.test.mot-testing.service.gov.uk
+#startingUrl = https://acpt.test.mot-testing.service.gov.uk
+startingUrl = https://nft.test.mot-testing.service.gov.uk
 
 #
 # The seed used by OTP Pin Generator in all test environments
@@ -16,3 +17,9 @@ seed = 9b0bf51be1fdd18842209e430092d643b28768b7
 # Supported values are: chrome
 #
 browser = chrome
+
+#
+# When to take screenshots of the browser window at the end of each test scenario
+# Supported values are: always, onErrorOnly
+#
+takeScreenshots = onErrorOnly
