--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,8 @@ task('cucumber-all') {
 
 test {
     description 'Runs all scenarios as JUnit tests in parallel'
-    include 'uk/gov/dvsa/mot/junit/CourgetteRunner.class'
+    include 'uk/gov/dvsa/mot/junit/CucumberRunner.class'
+    testLogging.showStandardStreams = true
     outputs.upToDateWhen { false }
 }
 
@@ -73,7 +74,6 @@ dependencies {
     testCompile "info.cukes:cucumber-java8:$cucumberVersion"
     testCompile "info.cukes:cucumber-spring:$cucumberVersion"
     testCompile "info.cukes:cucumber-junit:$cucumberVersion"
-    testCompile "io.github.prashant-ramcharan:courgette-jvm:1.3.0"
     testCompile "org.seleniumhq.selenium:selenium-java:$seleniumVersion"
     testCompile "org.slf4j:slf4j-api:$slf4jVersion"
     testCompile "org.slf4j:log4j-over-slf4j:$slf4jVersion"
@@ -83,6 +83,9 @@ dependencies {
     testCompile "javax.inject:javax.inject:1"
 
     // depends upon the "mot/2fa-pin-generator" project being checked out alongside this project, then built manually
-    testCompile files("../2fa-pin-generator/build/libs/2fa-generator-1.0.jar")
+    testCompile files('../2fa-pin-generator/build/libs/2fa-generator-1.0.jar')
+
+    // Reporting library
+    testCompile 'com.github.mkolisnyk:cucumber-runner:1.0.8'
 }
 
