--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,15 @@
 apply plugin: 'java'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+ext {
+    javaVersion = '1.8'
+    cucumberVersion = '1.2.5'
+    seleniumVersion = '3.4.0'
+    springVersion = '4.3.8.RELEASE'
+    slf4jVersion = '1.7.5'
+}
+
+sourceCompatibility = javaVersion
+targetCompatibility = javaVersion
 
 repositories {
     jcenter()
@@ -22,7 +30,7 @@ task('cucumber-feature') {
         }
         javaexec {
             main = "cucumber.api.cli.Main"
-            classpath = configurations.cucumberRuntime + sourceSets.test.output + sourceSets.test.resources.sourceDirectories
+            classpath = configurations.cucumberRuntime + sourceSets.test.output
             args = ['--plugin', 'pretty', '--glue', 'uk.gov.dvsa.mot', 'features/' + feature]
         }
     }
@@ -37,7 +45,7 @@ task('cucumber-tag') {
         }
         javaexec {
             main = "cucumber.api.cli.Main"
-            classpath = configurations.cucumberRuntime + sourceSets.test.output + sourceSets.test.resources.sourceDirectories
+            classpath = configurations.cucumberRuntime + sourceSets.test.output
             args = ['--plugin', 'pretty', '--glue', 'uk.gov.dvsa.mot', '--tags', tag, 'features']
         }
     }
@@ -49,7 +57,7 @@ task('cucumber-all') {
     doLast {
         javaexec {
             main = "cucumber.api.cli.Main"
-            classpath = configurations.cucumberRuntime + sourceSets.test.output + sourceSets.test.resources.sourceDirectories
+            classpath = configurations.cucumberRuntime + sourceSets.test.output
             args = ['--plugin', 'pretty', '--glue', 'uk.gov.dvsa.mot', 'features']
         }
     }
@@ -58,24 +66,23 @@ task('cucumber-all') {
 test {
     description 'Runs all scenarios as JUnit tests in parallel'
     include 'uk/gov/dvsa/mot/junit/CourgetteRunner.class'
-    testLogging.showStandardStreams = true
     outputs.upToDateWhen { false }
 }
 
 dependencies {
-    testCompile 'info.cukes:cucumber-java8:1.2.5'
-    testCompile 'info.cukes:cucumber-spring:1.2.5'
-    testCompile 'info.cukes:cucumber-junit:1.2.5'
-    testCompile 'io.github.prashant-ramcharan:courgette-jvm:1.3.0'
-    testCompile 'org.seleniumhq.selenium:selenium-java:3.4.0'
-    testCompile 'org.slf4j:slf4j-api:1.7.25'
-    testCompile 'org.slf4j:log4j-over-slf4j:1.7.5'
-    testCompile 'ch.qos.logback:logback-classic:1.2.3'
-    testCompile 'org.springframework:spring-context:4.3.8.RELEASE'
-    testCompile 'org.springframework:spring-test:4.3.8.RELEASE'
-    testCompile 'javax.inject:javax.inject:1'
+    testCompile "info.cukes:cucumber-java8:$cucumberVersion"
+    testCompile "info.cukes:cucumber-spring:$cucumberVersion"
+    testCompile "info.cukes:cucumber-junit:$cucumberVersion"
+    testCompile "io.github.prashant-ramcharan:courgette-jvm:1.3.0"
+    testCompile "org.seleniumhq.selenium:selenium-java:$seleniumVersion"
+    testCompile "org.slf4j:slf4j-api:$slf4jVersion"
+    testCompile "org.slf4j:log4j-over-slf4j:$slf4jVersion"
+    testCompile "ch.qos.logback:logback-classic:1.2.3"
+    testCompile "org.springframework:spring-context:$springVersion"
+    testCompile "org.springframework:spring-test:$springVersion"
+    testCompile "javax.inject:javax.inject:1"
 
     // depends upon the "mot/2fa-pin-generator" project being checked out alongside this project, then built manually
-    testCompile files('../2fa-pin-generator/build/libs/2fa-generator-1.0.jar')
+    testCompile files("../2fa-pin-generator/build/libs/2fa-generator-1.0.jar")
 }
 
