--- a/build.gradle
+++ b/build.gradle
@@ -65,8 +65,7 @@ task('cucumber-all') {
 
 test {
     description 'Runs all scenarios as JUnit tests in parallel'
-    include 'uk/gov/dvsa/mot/junit/CucumberRunner.class'
-    testLogging.showStandardStreams = true
+    include 'uk/gov/dvsa/mot/junit/CourgetteRunner.class'
     outputs.upToDateWhen { false }
 }
 
@@ -74,6 +73,7 @@ dependencies {
     testCompile "info.cukes:cucumber-java8:$cucumberVersion"
     testCompile "info.cukes:cucumber-spring:$cucumberVersion"
     testCompile "info.cukes:cucumber-junit:$cucumberVersion"
+    testCompile "io.github.prashant-ramcharan:courgette-jvm:1.3.0"
     testCompile "org.seleniumhq.selenium:selenium-java:$seleniumVersion"
     testCompile "org.slf4j:slf4j-api:$slf4jVersion"
     testCompile "org.slf4j:log4j-over-slf4j:$slf4jVersion"
@@ -83,9 +83,6 @@ dependencies {
     testCompile "javax.inject:javax.inject:1"
 
     // depends upon the "mot/2fa-pin-generator" project being checked out alongside this project, then built manually
-    testCompile files('../2fa-pin-generator/build/libs/2fa-generator-1.0.jar')
-
-    // Reporting library
-    testCompile 'com.github.mkolisnyk:cucumber-runner:1.0.8'
+    testCompile files("../2fa-pin-generator/build/libs/2fa-generator-1.0.jar")
 }
 
