--- a/build.gradle
+++ b/build.gradle
@@ -72,17 +72,30 @@ task('cucumber-all') {
     }
 }
 
+task('cucumber-reporting') {
+    dependsOn assemble, compileTestJava
+    doLast{
+        javaexec {
+            main = "uk.gov.dvsa.mot.junit.CucumberReporting"
+            classpath = configurations.cucumberRuntime + sourceSets.test.output
+        }
+    }
+}
+
 test {
     description 'Runs all scenarios as JUnit tests in parallel'
     include 'uk/gov/dvsa/mot/junit/CourgetteRunner.class'
     outputs.upToDateWhen { false }
 }
 
+test.finalizedBy 'cucumber-reporting'
+
 dependencies {
     testCompile "info.cukes:cucumber-java8:$cucumberVersion"
     testCompile "info.cukes:cucumber-spring:$cucumberVersion"
     testCompile "info.cukes:cucumber-junit:$cucumberVersion"
     testCompile "io.github.prashant-ramcharan:courgette-jvm:1.3.1"
+    testCompile "com.github.mkolisnyk:cucumber-runner:1.0.8"
     testCompile "org.seleniumhq.selenium:selenium-java:$seleniumVersion"
     testCompile "org.slf4j:slf4j-api:$slf4jVersion"
     testCompile "org.slf4j:log4j-over-slf4j:$slf4jVersion"
