--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ ext {
     javaVersion = '1.8'
     cucumberVersion = '1.2.5'
     seleniumVersion = '3.4.0'
-    springVersion = '4.3.8.RELEASE'
+    springVersion = '4.3.9.RELEASE'
     slf4jVersion = '1.7.5'
 }
 
@@ -99,13 +99,29 @@ dependencies {
     testCompile "info.cukes:cucumber-junit:$cucumberVersion"
     testCompile "io.github.prashant-ramcharan:courgette-jvm:1.3.1"
     testCompile "com.github.mkolisnyk:cucumber-runner:1.0.8"
-    testCompile "org.seleniumhq.selenium:selenium-java:$seleniumVersion"
+    testCompile ("org.seleniumhq.selenium:selenium-java:$seleniumVersion") {
+        // exclude the unused drivers (HTMLUnit, IE, Edge, Safari, Firefox, Opera)
+        exclude group: 'org.seleniumhq.selenium', module: 'htmlunit-driver'
+        exclude group: 'org.seleniumhq.selenium', module: 'selenium-edge-driver'
+        exclude group: 'org.seleniumhq.selenium', module: 'selenium-firefox-driver'
+        exclude group: 'org.seleniumhq.selenium', module: 'selenium-ie-driver'
+        exclude group: 'org.seleniumhq.selenium', module: 'selenium-opera-driver'
+        exclude group: 'org.seleniumhq.selenium', module: 'selenium-safari-driver'
+        exclude group: 'net.sourceforge.htmlunit', module: 'htmlunit'
+    }
     testCompile "org.slf4j:slf4j-api:$slf4jVersion"
     testCompile "org.slf4j:log4j-over-slf4j:$slf4jVersion"
     testCompile "ch.qos.logback:logback-classic:1.2.3"
     testCompile "org.springframework:spring-context:$springVersion"
     testCompile "org.springframework:spring-test:$springVersion"
+    testCompile "org.springframework:spring-jdbc:$springVersion"
     testCompile "javax.inject:javax.inject:1"
+    testCompile "mysql:mysql-connector-java:5.1.42"
+    testCompile "commons-dbcp:commons-dbcp:1.4"
+    testCompile ("xml-apis:xml-apis:1.4.01") {
+        // spring-context requires the older XML APIs
+        force = true
+    }
 
     // depends upon the "mot/2fa-pin-generator" project being checked out alongside this project, then built manually
     testCompile files("../2fa-pin-generator/build/libs/2fa-generator-1.0.jar")
