--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ ext {
     seleniumVersion = '3.4.0'
     springVersion = '4.3.9.RELEASE'
     slf4jVersion = '1.7.5'
+    cucumberOptions = ['--plugin', 'pretty', '--plugin', 'json:build/reports/selenium/selenium.json',
+                       '--plugin', 'html:build/reports/selenium', '--glue', 'uk.gov.dvsa.mot']
 }
 
 sourceCompatibility = javaVersion
@@ -24,6 +26,7 @@ configurations {
 task('cucumber-feature') {
     description 'Runs a single feature test (specified using -Pfeature=<the .feature file>'
     dependsOn assemble, compileTestJava
+    finalizedBy 'cucumber-reporting'
     doLast {
         if (!project.hasProperty('feature')) {
             throw new GradleException('feature parameter must be defined')
@@ -32,10 +35,8 @@ task('cucumber-feature') {
             main = "cucumber.api.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.test.output + sourceSets.test.resources.sourceDirectories
 
-            // Cucumber configuration, same as defined in CorgetteRunner
-            args = ['--plugin', 'pretty', '--plugin', 'json:build/reports/selenium/selenium.json',
-                    '--plugin', 'html:build/reports/selenium', '--glue', 'uk.gov.dvsa.mot',
-                    'src/test/resources/features/' + feature]
+            // Cucumber configuration
+            args = cucumberOptions + ['src/test/resources/features/' + feature]
         }
     }
 }
@@ -43,6 +44,7 @@ task('cucumber-feature') {
 task('cucumber-tag') {
     description 'Runs all features matching the tag(s) (specified using -Ptag=<tag(s)>'
     dependsOn assemble, compileTestJava
+    finalizedBy 'cucumber-reporting'
     doLast {
         if (!project.hasProperty('tag')) {
             throw new GradleException('tag parameter must be defined')
@@ -51,10 +53,8 @@ task('cucumber-tag') {
             main = "cucumber.api.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.test.output + sourceSets.test.resources.sourceDirectories
 
-            // Cucumber configuration, same as defined in CorgetteRunner
-            args = ['--plugin', 'pretty', '--plugin', 'json:build/reports/selenium/selenium.json',
-                    '--plugin', 'html:build/reports/selenium', '--glue', 'uk.gov.dvsa.mot', '--tags', tag,
-                    'src/test/resources/features']
+            // Cucumber configuration
+            args = cucumberOptions + ['--tags', tag, 'src/test/resources/features']
         }
     }
 }
@@ -62,42 +62,35 @@ task('cucumber-tag') {
 task('cucumber-all') {
     description 'Runs all feature tests in serial'
     dependsOn assemble, compileTestJava
+    finalizedBy 'cucumber-reporting'
     doLast {
         javaexec {
             main = "cucumber.api.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.test.output + sourceSets.test.resources.sourceDirectories
 
-            // Cucumber configuration, same as defined in CorgetteRunner
-            args = ['--plugin', 'pretty', '--plugin', 'json:build/reports/selenium/selenium.json',
-                    '--plugin', 'html:build/reports/selenium', '--glue', 'uk.gov.dvsa.mot',
-                    'src/test/resources/features']
+            // Cucumber configuration
+            args = cucumberOptions + ['src/test/resources/features']
         }
     }
+}
+
+clean.doFirst {
+    delete "target"
 }
 
 task('cucumber-reporting') {
     dependsOn assemble, compileTestJava
     doLast{
         javaexec {
-            main = "uk.gov.dvsa.mot.junit.CucumberReporting"
+            main = "uk.gov.dvsa.mot.reporting.CucumberReporting"
             classpath = configurations.cucumberRuntime + sourceSets.test.output
         }
     }
 }
 
-test {
-    description 'Runs all scenarios as JUnit tests in parallel'
-    include 'uk/gov/dvsa/mot/junit/CourgetteRunner.class'
-    outputs.upToDateWhen { false }
-}
-
-test.finalizedBy 'cucumber-reporting'
-
 dependencies {
     testCompile "info.cukes:cucumber-java8:$cucumberVersion"
     testCompile "info.cukes:cucumber-spring:$cucumberVersion"
-    testCompile "info.cukes:cucumber-junit:$cucumberVersion"
-    testCompile "io.github.prashant-ramcharan:courgette-jvm:1.3.1"
     testCompile "com.github.mkolisnyk:cucumber-runner:1.0.8"
     testCompile ("org.seleniumhq.selenium:selenium-java:$seleniumVersion") {
         // exclude the unused drivers (HTMLUnit, IE, Edge, Safari, Firefox, Opera)
@@ -126,4 +119,3 @@ dependencies {
     // depends upon the "mot/2fa-pin-generator" project being checked out alongside this project, then built manually
     testCompile files("../2fa-pin-generator/build/libs/2fa-generator-1.0.jar")
 }
-
