--- a/build.gradle
+++ b/build.gradle
@@ -128,14 +128,12 @@ dependencies {
         exclude group: 'info.cukes', module: 'cucumber-testng'
     }
     testCompile ("org.seleniumhq.selenium:selenium-java:$seleniumVersion") {
-        // exclude the unused drivers (HTMLUnit, IE, Edge, Safari, Firefox, Opera)
-        exclude group: 'org.seleniumhq.selenium', module: 'htmlunit-driver'
+        // exclude the unused drivers (IE, Edge, Safari, Firefox, Opera)
         exclude group: 'org.seleniumhq.selenium', module: 'selenium-edge-driver'
         exclude group: 'org.seleniumhq.selenium', module: 'selenium-firefox-driver'
         exclude group: 'org.seleniumhq.selenium', module: 'selenium-ie-driver'
         exclude group: 'org.seleniumhq.selenium', module: 'selenium-opera-driver'
         exclude group: 'org.seleniumhq.selenium', module: 'selenium-safari-driver'
-        exclude group: 'net.sourceforge.htmlunit', module: 'htmlunit'
     }
     testCompile "org.slf4j:slf4j-api:$slf4jVersion"
     testCompile "org.slf4j:log4j-over-slf4j:$slf4jVersion"
