Added check if server is already running at testsuite startup.

--- a/src/server/resources/application.properties
+++ b/src/server/resources/application.properties
@@ -7,5 +7,7 @@ server.port=9999
 # disables security for actuator endpoints
 endpoints.sensitive=false
 
-# enables remote graceful shutdown
+# enables remote graceful shutdown (by POST to /shutdown)
 endpoints.shutdown.enabled=true
+
+# other actuator endpoints (including /health, used by the test runner) are enabled by default
