--- a/build.gradle
+++ b/build.gradle
@@ -64,14 +64,11 @@ checkstyle {
     showViolations = true
 }
 
-task('browserstack') {
-    description 'Runs a single feature (specified using -Ptarget_config=...)'
+task('testsuite') {
+    description 'Run a testsuite with optional arguments...'
     dependsOn assemble, compileJava, check
     finalizedBy 'cucumber-reporting'
     doLast {
-        if (!project.hasProperty('target_config')) {
-            throw new GradleException('target_config parameter must be defined')
-        }
         copy {
             into "build/server-libs"
             from configurations.serverRuntime + sourceSets.server.output
@@ -80,297 +77,41 @@ task('browserstack') {
             main = 'uk.gov.dvsa.mot.runner.StartDataServer'
             classpath = configurations.cucumberRuntime + sourceSets.main.output
         }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.browserstack.StartBrowserStackLocal'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-            systemProperty "target_config", target_config
-        }
-        try {
+        if (project.hasProperty('target_config')) {
             javaexec {
-                main = "cucumber.api.cli.Main"
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-                // Cucumber configuration
-                args = cucumberOptions + ['--tags', '@browserstack', 'src/main/resources/features']
-
-                systemProperty "target_config", target_config
-            }
-        } finally {
-            javaexec {
-                main = 'uk.gov.dvsa.mot.browserstack.StopBrowserStackLocal'
+                main = 'uk.gov.dvsa.mot.browserstack.StartBrowserStackLocal'
                 classpath = configurations.cucumberRuntime + sourceSets.main.output
 
                 systemProperty "target_config", target_config
             }
-            javaexec {
-                main = 'uk.gov.dvsa.mot.runner.StopDataServer'
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-                ignoreExitValue = true
-            }
-        }
-    }
-}
-
-task('cucumber-feature') {
-    description 'Runs a single feature (specified using -Pfeature=...)'
-    dependsOn assemble, compileJava, check
-    finalizedBy 'cucumber-reporting'
-    doLast {
-        if (!project.hasProperty('feature')) {
-            throw new GradleException('feature parameter must be defined')
-        }
-        copy {
-            into "build/server-libs"
-            from configurations.serverRuntime + sourceSets.server.output
-        }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.runner.StartDataServer'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
         }
         try {
             javaexec {
-                main = "cucumber.api.cli.Main"
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
+                args = cucumberOptions
+                if (project.hasProperty('tag')) {
+                    args += ['--tags', tag, 'src/main/resources/features']
+                } else {
+                    if (project.hasProperty('feature')) {
+                        args += ['src/main/resources/features/' + feature]
+                    } else {
+                        args += ['src/main/resources/features/']
+                    }
+                    if (project.hasProperty('scenario')) {
+                        args += ['--name', scenario]
+                    }
+                }
 
-                // Cucumber configuration
-                args = cucumberOptions + ['src/main/resources/features/' + feature]
-            }
-        } finally {
-            javaexec {
-                main = 'uk.gov.dvsa.mot.runner.StopDataServer'
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-                ignoreExitValue = true
-            }
-        }
-    }
-}
-
-task('browserstack-feature') {
-    description 'Runs a single feature (specified using -Pfeature=...)'
-    dependsOn assemble, compileJava, check
-    finalizedBy 'cucumber-reporting'
-    doLast {
-        if (!project.hasProperty('feature')) {
-            throw new GradleException('feature parameter must be defined')
-        }
-        copy {
-            into "build/server-libs"
-            from configurations.serverRuntime + sourceSets.server.output
-        }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.runner.StartDataServer'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
-        }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.browserstack.StartBrowserStackLocal'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-            systemProperty "target_config", target_config
-        }
-        try {
-            javaexec {
-                main = "cucumber.api.cli.Main"
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-                // Cucumber configuration
-                args = cucumberOptions + ['src/main/resources/features/' + feature]
-
-                systemProperty "target_config", target_config
-            }
-        } finally {
-            javaexec {
-                main = 'uk.gov.dvsa.mot.browserstack.StopBrowserStackLocal'
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-                systemProperty "target_config", target_config
-            }
-            javaexec {
-                main = 'uk.gov.dvsa.mot.runner.StopDataServer'
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-                ignoreExitValue = true
-            }
-        }
-    }
-}
-
-task('cucumber-scenario') {
-    description 'Runs matching scenarios within a single feature test (specified using -Pfeature=... -Pscenario=...)'
-    dependsOn assemble, compileJava, check
-    finalizedBy 'cucumber-reporting'
-    doLast {
-        if (!project.hasProperty('feature')) {
-            throw new GradleException('feature parameter must be defined')
-        }
-        if (!project.hasProperty('scenario')) {
-            throw new GradleException('scenario parameter must be defined')
-        }
-        copy {
-            into "build/server-libs"
-            from configurations.serverRuntime + sourceSets.server.output
-        }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.runner.StartDataServer'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
-        }
-        try {
-            javaexec {
-                main = "cucumber.api.cli.Main"
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-                // Cucumber configuration
-                args = cucumberOptions + ['--name', scenario, 'src/main/resources/features/' + feature]
-            }
-        } finally {
-            javaexec {
-                main = 'uk.gov.dvsa.mot.runner.StopDataServer'
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-                ignoreExitValue = true
-            }
-        }
-    }
-}
-
-task('browserstack-scenario') {
-    description 'Runs matching scenarios within a single feature test (specified using -Pfeature=... -Pscenario=... -Ptarget_config=...)'
-    dependsOn assemble, compileJava, check
-    finalizedBy 'cucumber-reporting'
-    doLast {
-        if (!project.hasProperty('feature')) {
-            throw new GradleException('feature parameter must be defined')
-        }
-        if (!project.hasProperty('scenario')) {
-            throw new GradleException('feature parameter must be defined')
-        }
-        if (!project.hasProperty('target_config')) {
-            throw new GradleException('target_config parameter must be defined')
-        }
-        copy {
-            into "build/server-libs"
-            from configurations.serverRuntime + sourceSets.server.output
-        }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.runner.StartDataServer'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
-        }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.browserstack.StartBrowserStackLocal'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-            systemProperty "target_config", target_config
-        }
-        try {
-            javaexec {
-                main = "cucumber.api.cli.Main"
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-                // Cucumber configuration
-                args = cucumberOptions + ['--name', scenario, 'src/main/resources/features/' + feature]
-
-                systemProperty "target_config", target_config
-            }
-        } finally {
-            javaexec {
-                main = 'uk.gov.dvsa.mot.browserstack.StopBrowserStackLocal'
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-                systemProperty "target_config", target_config
-            }
-            javaexec {
-                main = 'uk.gov.dvsa.mot.runner.StopDataServer'
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-                ignoreExitValue = true
-            }
-        }
-    }
-}
-
-task('cucumber-tag') {
-    description 'Runs all features matching the tag(s) (specified using -Ptag=...)'
-    dependsOn assemble, compileJava, check
-    finalizedBy 'cucumber-reporting'
-    doLast {
-        if (!project.hasProperty('tag')) {
-            throw new GradleException('tag parameter must be defined')
-        }
-        copy {
-            into "build/server-libs"
-            from configurations.serverRuntime + sourceSets.server.output
-        }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.runner.StartDataServer'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
-        }
-        try {
-            javaexec {
-                main = "cucumber.api.cli.Main"
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-                // Cucumber configuration
-                args = cucumberOptions + ['--tags', tag, 'src/main/resources/features']
-            }
-        } finally {
-            javaexec {
-                main = 'uk.gov.dvsa.mot.runner.StopDataServer'
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-                ignoreExitValue = true
-            }
-        }
-    }
-}
-
-task('browserstack-tag') {
-    description 'Runs all features matching the tag(s) (specified using -Ptag=... -Ptarget_config=...)'
-    dependsOn assemble, compileJava, check
-    finalizedBy 'cucumber-reporting'
-    doLast {
-        if (!project.hasProperty('tag')) {
-            throw new GradleException('tag parameter must be defined')
-        }
-        if (!project.hasProperty('target_config')) {
-            throw new GradleException('target_config parameter must be defined')
-        }
-        copy {
-            into "build/server-libs"
-            from configurations.serverRuntime + sourceSets.server.output
-        }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.runner.StartDataServer'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
-        }
-        javaexec {
-            main = 'uk.gov.dvsa.mot.browserstack.StartBrowserStackLocal'
-            classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-            systemProperty "target_config", target_config
-        }
-        try {
-            if (project.hasProperty("target_config")) {
-                javaexec {
-                    main = "cucumber.api.cli.Main"
-                    classpath = configurations.cucumberRuntime + sourceSets.main.output
-
-                    // Cucumber configuration
-                    args = cucumberOptions + ['--tags', tag, 'src/main/resources/features']
-
+                if (project.hasProperty('target_config')) {
                     systemProperty "target_config", target_config
                 }
-            } else {
-                javaexec {
-                    main = "cucumber.api.cli.Main"
-                    classpath = configurations.cucumberRuntime + sourceSets.main.output
 
-                    // Cucumber configuration
-                    args = cucumberOptions + ['--tags', tag, 'src/main/resources/features']
-                }
+                main = "cucumber.api.cli.Main"
+                classpath = configurations.cucumberRuntime + sourceSets.main.output
             }
         } finally {
-            javaexec {
-                main = 'uk.gov.dvsa.mot.browserstack.StopBrowserStackLocal'
-                classpath = configurations.cucumberRuntime + sourceSets.main.output
-
+            if (project.hasProperty('target_config')) {
                 javaexec {
-                    main = 'uk.gov.dvsa.mot.browserstack.StartBrowserStackLocal'
+                    main = 'uk.gov.dvsa.mot.browserstack.StopBrowserStackLocal'
                     classpath = configurations.cucumberRuntime + sourceSets.main.output
 
                     systemProperty "target_config", target_config
